--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <title>Bootstrap Theme</title>
 </head>
 
-<body>
-  <nav class="navbar navbar-expand-md navbar-light fixed-top py-4">
+<body id="home" data-spy='scroll' data-target='#main-nav'>
+  <nav class="navbar navbar-expand-md navbar-light fixed-top py-4" id="main-nav">
   	<div class="container">
   		<a href="#home" class="navbar-brand">
   			<img src="img/mlogo.png" width="50" height="50">
@@ -28,7 +28,7 @@
   					<a href="#home" class="nav-link">Home</a>
   				</li>
   				<li class="nav-item">
-  					<za href="#about" class="nav-link">About</a>
+  					<a href="#about" class="nav-link">About</a>
   				</li>
   				<li class="nav-item">
   					<a href="#authors" class="nav-link">Meet The Authors</a>
@@ -345,6 +345,65 @@
   	</div>
   </section>
 
+  <!-- Contact -->
+  <section id="contact" class="bg-light py-5">
+  	<div class="container">
+  		<div class="row">
+  			<div class="col-lg-9">
+  				<h3>Get In Touch</h3>
+  				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+  				<form>
+  					<div class="input-group input-group-lg mb-3">
+  						<div class="input-group-prepend">
+  							<span class="input-group-text">
+  								<i class="fas fa-user"></i>
+  							</span>
+  						</div>
+  						<input type="text" class="form-control" placeholder="Name">
+  					</div>
+
+  					<div class="input-group input-group-lg mb-3">
+  						<div class="input-group-prepend">
+  							<span class="input-group-text">
+  								<i class="fas fa-envelope"></i>
+  							</span>
+  						</div>
+  						<input type="email" class="form-control" placeholder="Email">
+  					</div>
+
+  					<div class="input-group input-group-lg mb-3">
+  						<div class="input-group-prepend">
+  							<span class="input-group-text">
+  								<i class="fas fa-pencil-alt"></i>
+  							</span>
+  						</div>
+  						<textarea type="email" class="form-control" placeholder="Message" rows="5"></textarea>
+  					</div>
+
+  					<input type="submit" value="Submit" class="btn btn-primary btn-lg btn-block">
+  				</form>
+  			</div>
+
+  			<div class="col-lg-3 align-self-center">
+  				<img src="img/mlogo.png" class="img-fluid">
+  			</div>
+  		</div>
+  	</div>
+  </section>
+
+  <!-- Footer -->
+  <footer id="main-footer" class="py-5 bg-primary text-white">
+  	<div class="container">
+  		<div class="row text-center">
+  			<div class="col-md-6 ml-auto">
+  				<p class="lead">
+  					Copyright &copy; <span id="year"></span>
+  				</p>
+  			</div>
+  		</div>
+  	</div>
+  </footer>
+
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
@@ -355,6 +414,26 @@
   <script>
     // Get the current year for the copyright
     $('#year').text(new Date().getFullYear());
+
+    // Init Scrollspy
+    $('body').scrollspy({target: '#main-nav'});
+
+    // Smooth Scrolling
+    $("#main-nav a").on('click', function (event) {
+      if (this.hash !== "") {
+        event.preventDefault();
+
+        const hash = this.hash;
+
+        $('html, body').animate({
+          scrollTop: $(hash).offset().top
+        }, 800, function () {
+
+          window.location.hash = hash;
+        });
+      }
+    });
+
   </script>
 </body>
 
